# cpu_temp_visualization

./: CMakeLists.txt  Dockerfile  README.md  run_cpu.sh
src/: CMakeLists.txt  main.cpp
